Add a section of knee-plot analysis

--- a/scRNAseq_Phymatopus_californicus.Rmd
+++ b/scRNAseq_Phymatopus_californicus.Rmd
@@ -19,13 +19,46 @@ library(RColorBrewer)
 setwd("/media/nguyen/Data1/github/bulahwoo/scRNAseq_Phymatopus_californicus")
 ```
 
-## PC_27 (testis) sample
+## Drop-seq protocol
+
+We generated the digital expression matrix using the Drop-seq protocol developed by the McCarroll Lab (https://github.com/broadinstitute/Drop-seq). Here are the list of outputs:
+
+```{bash, engine.opts='-l', echo=FALSE}
+ls -lht /media/nguyen/Data1/mao/scseq/dropseq/pc27mito
+```
+
+## Knee-plot analysis
+
+The y axis indicates the "Cumulative fraction of uniquely mapped reads."
+
+```{r knee-plot}
+pc27=read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/cell_readcounts.txt.gz", header=F, stringsAsFactors=F)
+csum_pc27=cumsum(pc27$V1)
+df_pc27 <- cbind.data.frame(xvalue=1:length(csum_pc27), yvalue=csum_pc27/max(csum_pc27))
+ggplot(df_pc27, aes(xvalue, yvalue)) +
+  geom_point(size=0.1, color="cornflowerblue") + scale_x_continuous(limits = c(0,50000))+
+  #geom_hline(aes(yintercept=df_pc27 %>% filter(xvalue==10000) %>% pull(yvalue)), color="brown", linetype=2)+
+  geom_hline(aes(yintercept=df_pc27 %>% filter(xvalue==8000) %>% pull(yvalue)), color="brown", linetype=2)+
+  #geom_vline(aes(xintercept=10000), color="orange", linetype=3)+
+  geom_vline(aes(xintercept=8000), color="orange", linetype=3)+
+  labs(title=expression(italic(P.)~italic(californicus)~"testis (PC_27)"), x="Cell barcodes sorted by number of reads [descending]", y="Cumulative fraction of reads") +
+  theme_bw() +
+  theme(axis.line = element_blank(),
+        axis.title = element_text(color="black"),
+        axis.text = element_text(color="black"),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.background = element_blank(),
+        panel.border = element_rect(linewidth = 1, color="black"), aspect.ratio = 1)
+```
+
+## UMAP
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r umap}
+```{r umap, eval=TRUE}
 mtx_pc27 <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header = TRUE, row.names = 1, colClasses =c("character", rep("numeric", 10000)))
 so_pc27 <- CreateSeuratObject(counts = mtx_pc27, min.cells = 3, min.features = 200, project = "pc27") %>%
            PercentageFeatureSet(pattern = "^agat|^rrn", col.name = "percent.mt") %>%
