--- a/scRNAseq_Phymatopus_californicus.Rmd
+++ b/scRNAseq_Phymatopus_californicus.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Single-cell RNA sequencing in _P. californicus_"
+title: "Single-cell RNA sequencing of _Phymatopus californicus_ samples"
 author: "Bulah Wu"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: github_document
@@ -19,9 +19,27 @@ library(RColorBrewer)
 setwd("/media/nguyen/Data1/github/bulahwoo/scRNAseq_Phymatopus_californicus")
 ```
 
+
+## Genome assembly and annotation
+
+The _P. californicus_ genome was sequenced in [Petr Nguyen's lab](https://www.entu.cas.cz/en/departments/department-of-ecology-and-conservation-biology/laboratory-of-evolutionary-genetics/) using Oxford Nanopore technology and assembled with [Flye](https://github.com/mikolmogorov/Flye). Annotation of the genome was performed with [BRAKER3](https://github.com/Gaius-Augustus/BRAKER). The RNA-seq data utilized include the publicly accessible [SRR1021622](https://www.ncbi.nlm.nih.gov/sra/?term=SRR1021622) and additional data provided by [Michal Zurovec](https://www.entu.cas.cz/en/staff/profile/269-michalzurovec/). Mitochondrial genome was identified by aligning the genome assembly against the mt genomes of _Bombyx mori_ and _Yponomeuta evonymella_ using [minimap2](https://github.com/lh3/minimap2). The annotation of mt genome was carried out with [mitos](https://usegalaxy.org.au/root?tool_id=toolshed.g2.bx.psu.edu/repos/iuc/mitos2/mitos2/2.1.3+galaxy0) on the Galaxy platform.
+
+## Library preparation
+
+The scRNA-seq library was prepared with the RNAdia 2.0 kit (Dolomite Bio), following the manufacturer's instructions. Approximately 8,000 cells were captured, and the size distribution of the library was examined using the Bioanalyzer system.
+
+```{r pressure, echo=FALSE, fig.cap="Size distribution assessed by Bioanalyzer", out.width = '60%', fig.align = 'center'}
+#![Bioanalyzer electropherogram of sequencing library!]("/home/nguyen/Downloads/Bioanalyzer_trace_PC-27.png")
+knitr::include_graphics("/media/nguyen/Data1/github/bulahwoo/scRNAseq_Phymatopus_californicus/data/bioanalyzer_pc27.png")
+```
+
+## Quality control checks on raw reads
+
+[FastQC](https://www.bioinformatics.babraham.ac.uk/projects/fastqc/) was used for quality check. Output can be found [here](/media/nguyen/Data1/github/bulahwoo/scRNAseq_Phymatopus_californicus/data/fastqc_pc27_read1_pre.html) and [here](/media/nguyen/Data1/github/bulahwoo/scRNAseq_Phymatopus_californicus/data/fastqc_pc27_read2_pre.html).
+
 ## Drop-seq protocol
 
-We generated the digital expression matrix using the Drop-seq protocol developed by the McCarroll Lab (https://github.com/broadinstitute/Drop-seq). Here are the programs used:
+The digital expression matrix using the Drop-seq protocol developed by the McCarroll Lab (https://github.com/broadinstitute/Drop-seq). Here are the programs used:
 
 ```{bash, engine.opts='-l', echo=FALSE, comment=""}
 cat /media/nguyen/Data1/mao/scseq/dropseq/pc27mito/sh_dropseq_pc27mito.sh
@@ -31,7 +49,7 @@ cat /media/nguyen/Data1/mao/scseq/dropseq/pc27mito/sh_dropseq_pc27mito.sh
 
 The y axis indicates the "cumulative fraction of uniquely mapped reads."
 
-```{r knee-plot}
+```{r knee-plot, eval = FALSE}
 pc27=read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/cell_readcounts.txt.gz", header=F, stringsAsFactors=F)
 csum_pc27=cumsum(pc27$V1)
 df_pc27 <- cbind.data.frame(xvalue=1:length(csum_pc27), yvalue=csum_pc27/max(csum_pc27))
@@ -56,7 +74,7 @@ ggplot(df_pc27, aes(xvalue, yvalue)) +
 
 [Nikos Konstantinides](https://konstantinides-lab.com) suggested using [DropletUtils](https://doi.org/doi:10.18129/B9.bioc.DropletUtils) to identify the knee and inflection points. The y axis indicates the "total UMI count for each barcode."
 
-```{r DropletUtils}
+```{r DropletUtils, eval = FALSE}
 for_row_names <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header=T, stringsAsFactors=F)$GENE
 m_pc27 <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header=T, stringsAsFactors=F, row.names = for_row_names)[,-1]
 br.out <- barcodeRanks(m_pc27)
@@ -92,7 +110,7 @@ ggplot()+
 
 We used [Seurat](https://satijalab.org/seurat) to generate the UMAP plot.
 
-```{r umap-plot}
+```{r umap-plot, eval = FALSE}
 mtx_pc27 <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header = TRUE, row.names = 1, colClasses =c("character", rep("numeric", 10000)))
 so_pc27 <- CreateSeuratObject(counts = mtx_pc27, min.cells = 3, min.features = 200, project = "pc27") %>%
            PercentageFeatureSet(pattern = "^agat|^rrn", col.name = "percent.mt") %>%
