--- a/scRNAseq_Phymatopus_californicus.Rmd
+++ b/scRNAseq_Phymatopus_californicus.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Single-cell RNA sequencing of _Phymatopus californicus_ samples"
-author: "Bulah Wu"
-date: "`r format(Sys.time(), '%B %d, %Y')`"
+title: "Single-cell RNA sequencing of _Phymatopus californicus_ sample PC27"
+author: | 
+    | Andrea Elizabeth Acurio Armas, Bulah Wu, Petr Nguyen
+    | `r format(Sys.time(), '%B %d, %Y')`
 output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
 library(ggplot2)
 library(ggrepel)
 library(tidyr)
@@ -34,7 +34,7 @@ knitr::include_graphics("/media/nguyen/Data1/github/bulahwoo/scRNAseq_Phymatopus
 
 ## Quality control checks on raw reads
 
-[FastQC](https://www.bioinformatics.babraham.ac.uk/projects/fastqc/) was used for quality check. Output can be found [here](/media/nguyen/Data1/github/bulahwoo/scRNAseq_Phymatopus_californicus/data/fastqc_pc27_read1_pre.html) and [here](/media/nguyen/Data1/github/bulahwoo/scRNAseq_Phymatopus_californicus/data/fastqc_pc27_read2_pre.html).
+[FastQC](https://www.bioinformatics.babraham.ac.uk/projects/fastqc/) was used for quality check. Output can be found [here](fastqc/read1/fastqc.md) and [here](fastqc/read2/fastqc.md).
 
 ## Drop-seq protocol
 
@@ -49,7 +49,7 @@ cat /media/nguyen/Data1/mao/scseq/dropseq/pc27mito/sh_dropseq_pc27mito.sh
 
 In the dot plot, the x-axis represents the cell barcodes (organized by the number of reads, arranged from highest to lowest), and the y-axis shows the cumulative fraction of uniquely mapped reads. The transition from beads sampling cellular RNA to beads sampling ambient RNA is marked by the inflection point ([Macosko et al., 2015](http://dx.doi.org/10.1016/j.cell.2015.05.002)).
 
-```{r knee-plot, eval=FALSE}
+```{r knee-plot, warning=FALSE}
 pc27=read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/cell_readcounts.txt.gz", header=F, stringsAsFactors=F)
 csum_pc27=cumsum(pc27$V1)
 df_pc27 <- cbind.data.frame(xvalue=1:length(csum_pc27), yvalue=csum_pc27/max(csum_pc27))
@@ -58,7 +58,7 @@ ggplot(df_pc27, aes(xvalue, yvalue)) +
   geom_hline(aes(yintercept=df_pc27 %>% filter(xvalue==8000) %>% pull(yvalue)), color="brown", linetype=2)+
   geom_vline(aes(xintercept=8000), color="orange", linetype=3)+
   annotate("text", x=15000, y=0.25, label="(8000, 0.2998)")+ # 0.2998019
-  labs(title=expression(italic(P.)~italic(californicus)~"PC_27"), x="Cell barcodes sorted by number of reads [descending]", y="Cumulative fraction of reads") +
+  labs(title=expression(italic(P.)~italic(californicus)~"PC27"), x="Cell barcodes sorted by number of reads [descending]", y="Cumulative fraction of reads") +
   theme_bw() +
   theme(axis.line = element_blank(),
         axis.title = element_text(color="black"),
@@ -73,17 +73,16 @@ ggplot(df_pc27, aes(xvalue, yvalue)) +
 
 [Nikos Konstantinides](https://konstantinides-lab.com) suggested using [DropletUtils](https://doi.org/doi:10.18129/B9.bioc.DropletUtils) to identify the knee and inflection points. Here the x-axis indicates the cell barcodes (organized by the number of reads, arranged from highest to lowest) and the y-axis the total UMI count for each barcode.
 
-```{r barcodeRanks, warning=FALSE, eval=FALSE}
-for_row_names <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header=T, stringsAsFactors=F)$GENE
-m_pc27 <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header=T, stringsAsFactors=F, row.names = for_row_names)[,-1]
-br.out <- barcodeRanks(m_pc27)
+```{r barcodeRanks, warning=FALSE}
+mtx_pc27 <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c8k.txt.gz", header = TRUE, row.names = 1, colClasses =c("character", rep("numeric", 8000)))
+br.out <- barcodeRanks(mtx_pc27)
 o <- order(br.out$rank)
-# metadata(br.out)$knee: 273
-# which(br.out$total==273)[1]
-min_rank <- br.out$rank[3905] # 7321
-# metadata(br.out)$inflection : 114
-# which(br.out$total==114)[1]
-max_rank <- br.out$rank[7873] # 9401
+# metadata(br.out)$knee: 298
+# metadata(br.out)$inflection : 134
+# which(br.out$total==298)[1]
+min_rank <- br.out$rank[which(br.out$total==298)[1]] # 5916.5
+# which(br.out$total==134)[1]
+max_rank <- br.out$rank[which(br.out$total==134)[1]] # 7494
 ggplot()+
   geom_point(aes(x=br.out$rank, y=br.out$total+1), color="grey50", size=0.5, alpha=0.5)+
   geom_line(aes(x=br.out$rank[o],y=br.out$fitted[o]), color="magenta")+
@@ -91,11 +90,11 @@ ggplot()+
   geom_hline(aes(yintercept=metadata(br.out)$inflection), color="brown", linetype=2)+
   geom_vline(aes(xintercept=min_rank), color="orange", linetype=3)+
   geom_vline(aes(xintercept=max_rank), color="orange", linetype=3)+
-  annotate("text", x=2000, y=500, label="(7321, 273)")+
-  annotate("text", x=20000, y=70, label="(9401, 114)")+
+  annotate("text", x=2000, y=500, label="(5916.5, 298)")+
+  annotate("text", x=20000, y=70, label="(7494, 134)")+
   scale_x_continuous(limits=c(1,50000), trans='log10', breaks = c(1,10,100,1000,10000,10000),labels = scales::number)+
   scale_y_continuous(limits=c(1,50000), trans='log10', breaks = c(1,10,100,1000,10000,10000),labels = scales::number)+
-  labs(title=expression(italic(P.)~italic(californicus)~"PC_27"),
+  labs(title=expression(italic(P.)~italic(californicus)~"PC27"),
        x="Cell barcodes sorted by number of counts [descending]",
        y="Total UMI count for each barcode") +
   theme_bw() +
@@ -108,26 +107,23 @@ ggplot()+
         panel.border = element_rect(linewidth = 1, color="black"), aspect.ratio = 1)
 ```
 
-|      | FALSE| TRUE|
-|:-----|-----:|----:|
-|FALSE |  2038| 7016|
-|TRUE  |     0|  348|
+Subset the SingleCellExperiment object to discard the empty droplets.
 
-```{r emptyDrops1, eval=FALSE}
-for_row_names <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header=T, stringsAsFactors=F)$GENE
-m_pc27 <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header=T, stringsAsFactors=F, row.names = for_row_names)[,-1]
+```{r emptyDrops1}
+#mtx_pc27 <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c8k.txt.gz", header = TRUE, row.names = 1, colClasses =c("character", rep("numeric", 8000)))
 set.seed(100)
-e.out <- emptyDrops(m_pc27, niters=10000)
+e.out <- emptyDrops(mtx_pc27, niters=10000)
 is.cell <- e.out$FDR <= 0.001
 sum(is.cell, na.rm=TRUE)
-knitr::kable(table(Limited=e.out$Limited, Significant=is.cell))
+table(Limited=e.out$Limited, Significant=is.cell)
+mtx_pc27 <- mtx_pc27[,which(e.out$FDR<=0.001)]
 ```
 
-```{r emptyDrops2, eval=FALSE}
+```{r emptyDrops2, echo=FALSE, eval=FALSE}
 ggplot(e.out %>% as.data.frame() %>% filter(!is.na(LogProb)) %>% mutate(FDR_fill=ifelse(FDR>0.001, "cornflowerblue", "orange")))+
   geom_point(aes(x=Total, y=-LogProb, color=FDR_fill), size=1, alpha=0.5)+
   scale_color_manual(values=c("cornflowerblue", "orange"), labels=c('FDR > 0.001', 'FDR <= 0.001'))+
-  labs(title=expression(italic(P.)~italic(californicus)~"PC_27"),
+  labs(title=expression(italic(P.)~italic(californicus)~"PC27"),
        x="Total UMI count",
        y="-Log Probability") +
   theme_bw() +
@@ -145,28 +141,29 @@ ggplot(e.out %>% as.data.frame() %>% filter(!is.na(LogProb)) %>% mutate(FDR_fill
 
 ## UMAP plot
 
-We used [Seurat](https://satijalab.org/seurat) to generate the UMAP plot.
+[Seurat](https://satijalab.org/seurat) was used to generate the UMAP plot.
 
-```{r umap-plot, eval = FALSE}
-mtx_pc27 <- read.table("/media/nguyen/Data1/mao/scseq/dropseq/pc27mito/dge_c10k.txt.gz", header = TRUE, row.names = 1, colClasses =c("character", rep("numeric", 10000)))
+```{r umap-plot, warning=FALSE, message=FALSE}
 so_pc27 <- CreateSeuratObject(counts = mtx_pc27, min.cells = 3, min.features = 200, project = "pc27") %>%
            PercentageFeatureSet(pattern = "^agat|^rrn", col.name = "percent.mt") %>%
+           subset(subset = nFeature_RNA > 200 & nFeature_RNA < 2500 & percent.mt < 5) %>%
            SCTransform(vars.to.regress = "percent.mt") %>%
            RunPCA() %>%
            FindNeighbors(dims = 1:30) %>%
            RunUMAP(dims = 1:30) %>%
            FindClusters()
 df_umap <- so_pc27@reductions$umap@cell.embeddings %>% as.data.frame() %>% cbind(color=so_pc27@meta.data$seurat_clusters)
-my_color <- c(brewer.pal(name="Set2", n=8),brewer.pal(name="Dark2", n=8))[c(1,3,2,4,5:8,12,14,15)]
+#length(unique(df_umap$color))
+my_color <- c(brewer.pal(name="Set2", n=8),brewer.pal(name="Dark2", n=8))[c(1,3,2,4,5,6,7,8,12,14,15,16)]
+#my_color <- c(brewer.pal(name="Set2", n=8),brewer.pal(name="Dark2", n=8))[c(1,3,2,5,4,6,7,16,12,14,15,8,11)]
 ggplot(df_umap) +
   geom_point(aes(x=umap_1, y=umap_2, color=color), size=0.8) +
   geom_text_repel(data=df_umap %>% group_by(color) %>% summarise(q1=quantile(umap_1, 0.5), q2=quantile(umap_2, 0.5)),
-                  aes(x=q1, y=q2, label = LETTERS[1:11]), size=8) +
-  labs(title=expression(italic(P.)~italic(californicus)~"PC_27"),
+                  aes(x=q1, y=q2, label = LETTERS[1:12]), size=8) +
+  labs(title=expression(italic(P.)~italic(californicus)~"PC27"),
        x="UMAP_1",
        y="UMAP_2") +
-  #scale_color_brewer(palette = "Set2", name="clusters", labels=LETTERS[1:11]) +
-  scale_color_manual(values = my_color, name="clusters", labels=LETTERS[1:11]) +
+  scale_color_manual(values = my_color, name="clusters", labels=LETTERS[1:12]) +
   guides(color = guide_legend(override.aes = list(size = 5))) +
   theme_bw() +
   theme(axis.line = element_blank(),
